# vibe

./: README.md
C/: AUTHORS  LICENSE  README.MD  main-opencv.cpp
C++/: AUTHORS  CMakeLists.txt  INSTALL  LICENSE  README.MD
C++/cmake/: BenlaugUtils.cmake
C++/main/: CMakeLists.txt  ViBe_8UC1.cpp  ViBe_8UC3.cpp
C++/src/: CMakeLists.txt
C++/src/libvibe++/: ViBe.h  ViBe.t
C++/src/libvibe++/common/: ViBeBase.cpp  ViBeBase.h  ViBeTemplateBase.h  ViBeTemplateBase.t
C++/src/libvibe++/distances/: Manhattan.h
C++/src/libvibe++/math/: AbsoluteValue.h
C++/src/libvibe++/metaprograms/: CopyPixel.h  DistanceL1.h  SwapPixels.h
C++/src/libvibe++/system/: inline.h  types.h
Matlab/: AUTHORS  LICENSE  README.MD
Matlab/src/: libvibeModel_Sequential_AllocInit.m  libvibeModel_Sequential_Benchmark_DO_NOT_DISTRIBUTE.m  libvibeModel_Sequential_Demonstrate.m  libvibeModel_Sequential_GetMatchingNumber.m  libvibeModel_Sequential_GetMatchingThreshold.m  libvibeModel_Sequential_GetNumberOfSamples.m  libvibeModel_Sequential_GetUpdateFactor.m  libvibeModel_Sequential_New.m  libvibeModel_Sequential_PrintParameters.m  libvibeModel_Sequential_Segmentation.m  libvibeModel_Sequential_SetMatchingNumber.m  libvibeModel_Sequential_SetMatchingThreshold.m  libvibeModel_Sequential_Update.m
Python/: AUTHORS  LICENSE  README.MD
Python/src/: dataloader.py  evaluate.py  main.py  median_pool.py  model.py  test.py
videos/: driveway-320x240.avi
